# actors-cpp-experiments

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: demo.yml
scripts/: build-osx.sh  build.sh  demo.sh  get-deps.sh
src/: demo-sobjectizer.cpp  demos.h  main.cpp
